--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="{% static 'lib/slick/slick.css' %}" rel="stylesheet">
     <link href="{% static 'lib/slick/slick-theme.css' %}" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.7.7/js/bootstrap.bundle.min.js"></script>
 
 
     <!-- Template Stylesheet -->
@@ -225,8 +227,7 @@
 
     <!-- JavaScript Libraries -->
 
-    <script src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="http://stackpath.bootstrapcdn.com/bootstrap/3.7.7/js/bootstrap.bundle.min.js"></script>
+
     <script src="{% static 'lib/easing/easing.min.js' %}"></script>
     <script src="{% static 'lib/slick/slick.min.js' %}"></script>
 
