--- a/templates/base.html
+++ b/templates/base.html
@@ -226,7 +226,7 @@
     <!-- JavaScript Libraries -->
     <script src="//code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>"
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.7.7/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'lib/easing/easing.min.js' %}"></script>
     <script src="{% static 'lib/slick/slick.min.js' %}"></script>
