--- a/templates/base.html
+++ b/templates/base.html
@@ -225,8 +225,8 @@
 
     <!-- JavaScript Libraries -->
 
-    <script src="{% static 'https://code.jquery.com/jquery-3.4.1.min.js' %}"></script>
-    <script src="{% static 'https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'lib/easing/easing.min.js' %}"></script>
     <script src="{% static 'lib/slick/slick.min.js' %}"></script>
 
