--- a/templates/base.html
+++ b/templates/base.html
@@ -229,9 +229,10 @@
     <!-- <script src="{% static 'js/jquery.min.js' %}"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="{% static 'lib/easing/easing.min.js' %}"></script> -->
-    <script src="{% static 'lib/slick/slick.min.js' %}"></script>
+    <!-- <script src="{% static 'lib/slick/slick.min.js' %}"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/jquery.easing@1.4.1/jquery.easing.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Template Javascript -->
     <script src="{% static 'js/main.js' %}"></script>
