--- a/templates/index.html
+++ b/templates/index.html
@@ -219,6 +219,31 @@
                             <a href="/add-to-cart/{{hot.slug}}"><i class="fa fa-cart-plus"></i></a>
                             <a href="/add-to-wishlist/{{hot.slug}}"><i class="fa fa-heart"></i></a>
                             <a href="#"><i class="fa fa-search"></i></a>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#{{hot.slug}}">
+    View
+  </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="{{hot.slug}}" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="{{hot.image.url}}" alt="Product Image">
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary">Understood</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
                         </div>
                     </div>
