--- a/templates/index.html
+++ b/templates/index.html
@@ -220,7 +220,7 @@
                             <a href="/add-to-wishlist/{{hot.slug}}"><i class="fa fa-heart"></i></a>
                             <a href="#"><i class="fa fa-search"></i></a>
                             <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-primary" data-toggle="modal fade" data-target="#{{hot.slug}}">
+                            <button type="button" class="btn btn-primary" data-toggle="modal " data-target="#{{hot.slug}}">
     View
   </button>
 
