--- a/templates/index.html
+++ b/templates/index.html
@@ -235,7 +235,7 @@
           </button>
                                         </div>
                                         <div class="modal-body">
-                                            <img src="{{hot.image.url}}" alt="Product Image">
+                                            <img src="{{hot.image.url}}" class="modal-img" alt="Product Image">
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
