--- a/templates/index.html
+++ b/templates/index.html
@@ -220,16 +220,16 @@
                             <a href="/add-to-wishlist/{{hot.slug}}"><i class="fa fa-heart"></i></a>
                             <a href="#"><i class="fa fa-search"></i></a>
                             <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-primary" data-toggle="modal " data-target="#{{hot.slug}}">
-    View
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#{{hot.slug}}">
+    Launch demo modal
   </button>
 
                             <!-- Modal -->
-                            <div class="modal fade" id="{{hot.slug}}" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal fade" id="{{hot.slug}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="{{hot.slug}}">Product Image</h5>
+                                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -239,12 +239,11 @@
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Understood</button>
+                                            <button type="button" class="btn btn-primary">Save changes</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                     <div class="product-price">
