--- a/templates/index.html
+++ b/templates/index.html
@@ -221,7 +221,7 @@
                             <a href="#"><i class="fa fa-search"></i></a>
                             <!-- Button trigger modal -->
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#{{hot.slug}}">
-    Launch demo modal
+    View
   </button>
 
                             <!-- Modal -->
