--- a/templates/base.html
+++ b/templates/base.html
@@ -228,7 +228,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- <script src="{% static 'js/jquery.min.js' %}"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-modal/2.2.6/js/bootstrap-modalmanager.min.js" integrity="sha512-/HL24m2nmyI2+ccX+dSHphAHqLw60Oj5sK8jf59VWtFWZi9vx7jzoxbZmcBeeTeCUc7z1mTs3LfyXGuBU32t+w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="{% static 'lib/easing/easing.min.js' %}"></script> -->
     <!-- <script src="{% static 'lib/slick/slick.min.js' %}"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/jquery.easing@1.4.1/jquery.easing.min.js"></script>
